update functionality login, logout, check token

--- a/src/components/Cars/Car/Car.module.css
+++ b/src/components/Cars/Car/Car.module.css
@@ -10,7 +10,7 @@
     height : 200px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    border : 1px solid rgb(204, 204, 204);
+    border : 0 solid rgb(204, 204, 204);
     background-size: cover;
 }
 
