--- a/src/components/Form/BoxHorizone/BoxHorizone.module.css
+++ b/src/components/Form/BoxHorizone/BoxHorizone.module.css
@@ -1,6 +1,6 @@
 .BoxHorizone {
     width: 100%;
-    background-color: darkcyan;
+    background-color: #44668D;
     height: 200px;
     position: absolute;
     top: 20%;
