--- a/src/components/Form/BoxVertical/BoxVertical.module.css
+++ b/src/components/Form/BoxVertical/BoxVertical.module.css
@@ -12,7 +12,7 @@
     left : 45%;
     position: absolute;
     height: 450px;
-    background-color: darkslategrey;
+    background-color: #442233;
     width: 30vw;
     z-index: 4;
     transition: left 1.3s;
@@ -23,7 +23,7 @@
     left : 5%;
     position: absolute;
     height: 450px;
-    background-color: darkslategrey;
+    background-color: #442233;
     width: 30vw;
     z-index: 4;
     transition: left 1.3s;
