--- a/src/components/Form/Login/Login.module.css
+++ b/src/components/Form/Login/Login.module.css
@@ -25,7 +25,7 @@
     display: block;
     margin: 6px auto;
     padding: 11px;
-    border: 1px solid #b5b5b5;
+    border: 1px solid white;
     outline: none;
     box-sizing: border-box;
     border-radius: 6px;
