--- a/src/components/Form/Register/Register.module.css
+++ b/src/components/Form/Register/Register.module.css
@@ -40,7 +40,7 @@
     text-transform: uppercase;
     border-radius: 5px;
     cursor:pointer;
-    border : 1px solid #f9f9f9;
+    border : 1px solid white;
 }
 
 .Register button:hover {
