Fix with api and change theme color layout

--- a/src/components/Users/User/User.module.css
+++ b/src/components/Users/User/User.module.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
     background-color: white;
     height : 100px;
-    border: 1px solid black;
+    border-collapse: collapse;
+    box-shadow: 2px 2px 5px #ccc;
 }
 
 .User p {
