firebase add init

--- a/src/containers/Main/Main.module.css
+++ b/src/containers/Main/Main.module.css
@@ -17,6 +17,8 @@
     display: block;
     border: 1px solid #bbb;
     border-radius: 5px;
+    font-weight: 600;
+    font-size : 15px;
 }
 
 .LoadMore:hover  {
