--- a/src/containers/MainDetail/MainDetail.module.css
+++ b/src/containers/MainDetail/MainDetail.module.css
@@ -18,4 +18,28 @@
 
 .Content {
     background-color: rgb(40, 116, 202);
+    display: flex;
+    flex-direction: row;
+}
+
+.Content h3 {
+    text-align: center;
+}
+
+.UserContent {
+    flex : 3;
+}
+
+.UserContent h3 {
+    color : white;
+}
+
+.PostContent {
+    flex : 2;
+    background-color: white;
+    box-shadow: 3px 2px 6px #ccc;
+}
+
+.PostContent h3 {
+    color : #3686BD;
 }
